syntax = "proto3";
package proto;
option java_package = "sd.ufc.reserva.model";
option java_outer_classname = "ObjectMessageResponse";

message MessageResponse{
    string mensagem = 1; 
}